Feat: Web for welding vision updated