@@ -1,10 +1,13 @@
 package com.visionhub.dashboard.images;
 
+import com.visionhub.dashboard.settings.SettingsService;
 import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
+import org.springframework.http.CacheControl;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.core.RowMapper;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -13,20 +16,33 @@ import org.springframework.web.bind.annotation.RestController;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.time.Duration;
 import java.util.List;
 
 /**
- * Serves images SmbImageFetcher already pulled onto local disk (defect_images
- * .local_main_path / local_overlay_path). Looked up by defect_images.id, not
- * defect_id, since one defect can have image rows for more than one side.
+ * Serves images SmbImageFetcher already pulled onto local disk.
+ *
+ * Deliberately does NOT trust defect_images.local_main_path/local_overlay_path
+ * as an absolute path - those reflect whatever SmbImageFetcher's own
+ * config.json said at fetch time, which the user wants to control
+ * independently from a dashboard-side "image_root_path" setting (Settings
+ * page). So only the filename is taken from the stored path, and it's
+ * rejoined under {image_root_path}/{line}/{visionName}/ - the exact same
+ * folder shape SmbImageFetcher's own local_dest_paths() builds. If the two
+ * roots are kept in sync (the user's responsibility, by design), this finds
+ * the same file; if the dashboard's copy of the setting is wrong, fixing it
+ * in Settings fixes image serving immediately, no DB changes needed.
  */
 @RestController
 @RequestMapping("/api/images")
 public class ImageController {
     private final JdbcTemplate jdbc;
+    private final SettingsService settings;
 
-    public ImageController(JdbcTemplate jdbc) {
+    public ImageController(JdbcTemplate jdbc, SettingsService settings) {
         this.jdbc = jdbc;
+        this.settings = settings;
     }
 
     @GetMapping("/{id}/main")
@@ -42,15 +58,25 @@ public class ImageController {
     // column is always one of the two literal strings passed by main()/overlay() above,
     // never external input, so building the SELECT with it is safe.
     private ResponseEntity<Resource> serve(long id, String column) {
-        List<String> rows = jdbc.query(
-                "SELECT " + column + " FROM defect_images WHERE id = ? AND fetch_status = 'fetched'",
-                (rs, rowNum) -> rs.getString(1), id);
+        RowMapper<ImageRow> mapper = (rs, rowNum) -> new ImageRow(
+                rs.getString(column), rs.getString("line"), rs.getString("vision_name"));
 
-        if (rows.isEmpty() || rows.get(0) == null) {
+        List<ImageRow> rows = jdbc.query("""
+                SELECT di.%s, d.line, d.vision_name
+                FROM defect_images di
+                JOIN defects d ON d.id = di.defect_id
+                WHERE di.id = ? AND di.fetch_status = 'fetched'
+                """.formatted(column), mapper, id);
+
+        if (rows.isEmpty() || rows.get(0).storedPath() == null) {
             return ResponseEntity.notFound().build();
         }
 
-        Path path = Path.of(rows.get(0));
+        ImageRow row = rows.get(0);
+        String filename = Paths.get(row.storedPath()).getFileName().toString();
+        String imageRoot = settings.getRaw("image_root_path", "D:\\VisionDashboardImages");
+        Path path = Paths.get(imageRoot, row.line(), row.visionName(), filename);
+
         if (!Files.exists(path) || !Files.isReadable(path)) {
             return ResponseEntity.notFound().build();
         }
@@ -58,7 +84,7 @@ public class ImageController {
         MediaType contentType = probeContentType(path);
         return ResponseEntity.ok()
                 .contentType(contentType)
-                .cacheControl(org.springframework.http.CacheControl.maxAge(java.time.Duration.ofDays(30)))
+                .cacheControl(CacheControl.maxAge(Duration.ofDays(30)))
                 .body(new FileSystemResource(path));
     }
 
@@ -72,5 +98,8 @@ public class ImageController {
             // fall through to default below
         }
         return MediaType.IMAGE_JPEG;
+    }
+
+    private record ImageRow(String storedPath, String line, String visionName) {
     }
 }
